fix: ensure demo output doesn't spill out of screen on waves

--- a/packages/react-saasify/src/themes/waves/waves.module.css
+++ b/packages/react-saasify/src/themes/waves/waves.module.css
@@ -708,6 +708,11 @@
   overflow-y: auto;
 }
 
+.theme-waves .live-service-demo .output {
+  max-height: 30vh;
+  overflow-y: auto;
+}
+
 .theme-waves .code-block {
   background: transparent !important;
   color: white !important;
